@@ -1,3 +1,8 @@
+2021-11-19
++improved console outputs
++updated readme.txt
+#fixed frequent jumping between download and converting phase
+
 2021-11-18
 #catched ConnectionError
 #fixed timeout exception catching
@@ -10,7 +15,7 @@
 #fixed crash after loading certain images
 +retry deleting temporary image folder after downloading and converting everything
 +added changelog.txt
-#fixed index out of range errors
+#catched index out of range errors
 +number of finished hentai / number of all hentais
 #limit title to 140 characters
 +don't redownload and convert already existing hentai
